Update code for chapter 14